@@ -19,6 +19,7 @@ import org.springframework.web.servlet.mvc.support.RedirectAttributes;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.time.format.DateTimeFormatter;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Locale;
 import org.springframework.web.bind.annotation.ModelAttribute;
@@ -29,80 +30,120 @@ import org.springframework.web.bind.annotation.RequestParam;
 @RequestMapping("/prestamo")
 public class ControladorPrestamo {
     @Autowired
-    PrestamoServicio servicio;
+    PrestamoServicio prestamoServicio;
+
     @Autowired
     EmailServiciosImp emailServicio;
 
     @GetMapping("/{id}")
-    public String crearPrestamo(@PathVariable String id, HttpSession session, RedirectAttributes redirect){
-        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("d 'de' MMMM 'del' yyyy", new Locale("es", "ES"));
-        String mensajeTime = "Tiempo para reclamar: 24 horas.";
-        String tituloRecurso = "";
+    public String crearPrestamo(@PathVariable String id,
+                                HttpSession session,
+                                RedirectAttributes redirect) {
+
         Usuario user = (Usuario) session.getAttribute("user");
-        ResultadoPrestamo resultadoPrestamo = servicio.iniciarPrestamo(user.getId(), id);
-        if(!resultadoPrestamo.isExito()){
-            redirect.addFlashAttribute("error", resultadoPrestamo.getMensaje());
+        ResultadoPrestamo resultado = prestamoServicio.iniciarPrestamo(user.getId(), id);
+
+        if (!resultado.isExito()) {
+            redirect.addFlashAttribute("error", resultado.getMensaje());
             return "redirect:/";
         }
-        
-        String tituloModal = resultadoPrestamo.getMensaje();
-        Prestamo prestamo = resultadoPrestamo.getPrestamo();
-        String mensaje = String.format(
-                "El recurso con codigo (%s) se Prestó satisfactoriamente el %s. Por favor, devuélvalo el %s o antes.",
-                prestamo.getRecursoBibliografico().getCodigoDeBarras(),
-                prestamo.getFechaAdquisicion().format(formatter),
-                prestamo.getFechaDevolucion().format(formatter)
+
+        Prestamo prestamo = resultado.getPrestamo();
+
+        // Formateador reutilizable
+        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("d 'de' MMMM 'del' yyyy", 
+            Locale.of("es", "ES")
         );
-        redirect.addFlashAttribute("tituloModal", tituloModal);
-        redirect.addFlashAttribute("mensajeTime", mensajeTime);
-        redirect.addFlashAttribute("mensajeModal", mensaje);
 
+        // Construcción de mensajes
+        String mensajePrestamo = buildMensajePrestamo(prestamo, formatter);
 
-        tituloRecurso = prestamo.getRecursoBibliografico().getTitulo();
-        tituloRecurso = URLEncoder.encode(tituloRecurso, StandardCharsets.UTF_8).replace("+", "%20");
+        redirect.addFlashAttribute("tituloModal", resultado.getMensaje());
+        redirect.addFlashAttribute("mensajeTime", "Tiempo para reclamar: 24 horas.");
+        redirect.addFlashAttribute("mensajeModal", mensajePrestamo);
 
-        String bodyMail = servicio.generarBodyMail(resultadoPrestamo);
-        Email email = new Email(prestamo.getUsuario().getEmail(), bodyMail, "Prestamo de Recurso Bibliografica", null);
+        // Generar URL segura para búsqueda
+        String recursoCodificado = encodeTitulo(
+            prestamo.getRecursoBibliografico().getTitulo()
+        );
+
+        // Enviar correo
+        enviarCorreoPrestamo(prestamo, resultado);
+
+        return "redirect:/buscar/" + recursoCodificado;
+    }
+
+    private String buildMensajePrestamo(Prestamo prestamo, DateTimeFormatter formatter) {
+        return String.format(
+            "El recurso con código (%s) se prestó satisfactoriamente el %s. "
+            + "Por favor, devuélvalo el %s o antes.",
+            prestamo.getRecursoBibliografico().getTitulo(),
+            prestamo.getRecursoBibliografico().getCodigoDeBarras(),
+            prestamo.getFechaAdquisicion().format(formatter),
+            prestamo.getFechaDevolucion().format(formatter)
+        );
+    }
+
+    private String encodeTitulo(String titulo) {
+        return URLEncoder.encode(titulo, StandardCharsets.UTF_8).replace("+", "%20");
+    }
+
+    private void enviarCorreoPrestamo(Prestamo prestamo, ResultadoPrestamo resultado) {
+        String bodyMail = prestamoServicio.generarBodyMail(resultado);
+        Email email = new Email(
+            prestamo.getUsuario().getEmail(),
+            bodyMail,
+            "Préstamo de recurso Bibliográfico",
+            null
+        );
         emailServicio.enviarCorreo(email);
-        return "redirect:/buscar/" + tituloRecurso;
     }
 
     @GetMapping("listar")
     public String listarPrestamos(HttpSession session, Model model){
         Usuario user =(Usuario) session.getAttribute("user");
         if(user == null) return "redirect:/";
-        List<Prestamo> prestamosPorUsuario = servicio.getPrestamosPorUsuario(user.getId());
+        List<Prestamo> prestamosPorUsuario = prestamoServicio.getPrestamosPorUsuario(user.getId());
         model.addAttribute("prestamos", prestamosPorUsuario);
         return "pruebas";
     }
     
-    @GetMapping("/varios")
-    public String prestarVarios(@ModelAttribute("select") List<String> select, 
-                            HttpSession session, 
-                            RedirectAttributes redirect) {
-        
+   @GetMapping("/varios")
+    public String prestarVarios(@ModelAttribute("select") List<String> codigos,
+                                HttpSession session,
+                                RedirectAttributes redirect) 
+    {
         Usuario user = (Usuario) session.getAttribute("user");
-        if(user == null) {
+        if (user == null) {
             return "redirect:/";
         }
-        
+
+        if (codigos == null || codigos.isEmpty()) {
+            redirect.addFlashAttribute("error", "No seleccionaste ningún recurso.");
+            return "redirect:/canasta/listar";
+        }
+
         Integer idUser = user.getId();
-        boolean todosExitosos = true;
-        
-        for (String codigo : select){
-            if(codigo == null || codigo.trim().isEmpty()) {continue;}
-            
-            ResultadoPrestamo resultado = servicio.iniciarPrestamo(idUser, codigo);
-            if(!resultado.isExito()) {
-                redirect.addFlashAttribute("error", "Error al prestar el recurso " + codigo + ": " + resultado.getMensaje());
-                todosExitosos = false;
+        List<String> errores = new ArrayList<>();
+
+        for (String codigo : codigos) {
+            if (codigo != null || codigo.isBlank()) continue;
+
+            ResultadoPrestamo resultado = prestamoServicio.iniciarPrestamo(idUser, codigo);
+
+            if (!resultado.isExito()) {
+                errores.add("• " + codigo + ": " + resultado.getMensaje());
             }
         }
-        
-        if(todosExitosos) {
-            redirect.addFlashAttribute("success", "Todos los recursos se prestaron exitosamente");
+
+        if (errores.isEmpty()) {
+            redirect.addFlashAttribute("success", "Todos los recursos se prestaron exitosamente.");
+        } else {
+            redirect.addFlashAttribute("error",
+            "Algunos recursos no se pudieron prestar:<br>" + String.join("<br>", errores));
         }
-        
+
         return "redirect:/canasta/listar";
     }
+
 }
